docs/apim/4.12/hybrid-installation-and-configuration-guides/next-gen-cloud/.zip.md
---
description: Install a Next-Gen Cloud hybrid API Management 4.12 deployment from the binary distribution. Follow the steps to set it up.
metaLinks:
  alternates:
    - .zip.md
---

# .ZIP

## Overview

This guide explains how to install a Hybrid deployment of Gravitee API Management (APIM) using binaries (.ZIP).

{% hint style="warning" %}
This installation guide is for only development and quick start purposes. Do not use it for production environments. For more information about best practices for production environments, contact your Technical Account Manager.
{% endhint %}

## Prerequisites

Before you install a Hybrid Gateway, complete the following steps:

* Ensure that [Java 21](https://www.oracle.com/java/technologies/downloads/#java21) is available in the `$PATH`.
* Ensure that you have outbound internet access over HTTPS (443) to the Gravitee Cloud Gate for your Control Plane geography. For the list of Cloud Gate URLs, see [#architecture](./#architecture "mention").
* Install Redis required for rate limiting features. See [Redis Installation Guide](https://redis.io/docs/latest/operate/oss_and_stack/install/install-redis/).
* Download the `graviteeio-full-<version>.zip` distribution from [Gravitee.io Downloads](https://download.gravitee.io/#graviteeio-apim/distributions/), where `<version>` is the APIM version you want to install. The Hybrid Gateway is included in this distribution.
* Complete the steps in [#prepare-your-installation](./#prepare-your-installation "mention").

## Install Gravitee APIM

1.  Extract the Hybrid Gateway from the distribution using the following commands. Replace `<version>` with the version you downloaded.

    ```sh
    unzip graviteeio-full-<version>.zip -d /opt/gravitee

    cd /opt/gravitee/graviteeio-full-<version>/graviteeio-apim-gateway-<version>
    ```
2. Configure the Gateway section of your `gravitee.yml` file:
   1.  To access your `gravitee.yml` file, use the following command:

       ```bash
       vi config/gravitee.yml
       ```
   2.  Use the following configuration in the Gateway section of `gravitee.yml`:

       ```yaml
       management:
         type: http

       cloud:
         token: <YOUR-CLOUD-TOKEN>

       ratelimit:
         type: none

       license:
         key: <YOUR-LICENSE-KEY>
       ```

       * Replace `<YOUR-CLOUD-TOKEN>` with your Cloud Token.
       * Replace `<YOUR-LICENSE-KEY>` with your License Key.
3.  Start the Gateway using the following command:

    ```bash
    ./bin/gravitee
    ```
4.  (Optional) To run the Gateway in the background, use the following command:

    ```bash
    nohup ./bin/gravitee &
    ```

## Verification

*   To verify that the installation was successful, use the following command to confirm registration and `/sync` with Gravitee Cloud:

    ```bash
    tail -f logs/gravitee.log
    ```
